changes to analyzer

--- a/Analyzer.ipynb
+++ b/Analyzer.ipynb
@@ -54,13 +54,13 @@
     "        normal_b = stats.shapiro(self.B)\n",
     "        normal = normal_a & normal_b\n",
     "        if normal:\n",
-    "            self.__do_test('t-test')\n",
+    "            self.__initial_test('t-test')\n",
     "        else:\n",
-    "            self.__do_test('mann-whitney-u')\n",
+    "            self.__initial_test('mann-whitney-u')\n",
     "        #TODO: Check for independant or paired (usually user should specify that).\n",
     "           \n",
     "        \n",
-    "    def __do_test(self, test):\n",
+    "    def __initial_test(self, test):\n",
     "        if test == 't-test':\n",
     "            self.result = stats.ttest_ind(self.A, self.B)\n",
     "        elif test == 'mann-whitney-u':\n",
