--- a/Analyzer_temp_update.ipynb
+++ b/Analyzer_temp_update.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 8,
       "id": "02c7e55f",
       "metadata": {
         "id": "02c7e55f"
@@ -34,30 +34,9 @@
         "    def __init__(self):\n",
         "        self.A = None\n",
         "        self.B = None\n",
+        "        self.paired = None\n",
         "        self.testtype = None\n",
         "        self.result = None\n",
-        "\n",
-        "\n",
-        "    def fit(self, a, b, column_a=None, column_b=None):\n",
-        "        \"\"\"\n",
-        "            This method assigns the data after fixing the format and check for their lengths.\n",
-        "        \"\"\"\n",
-        "        format_checked_a = self.format_prepare(a, column_a)\n",
-        "        format_checked_b = self.format_prepare(b, column_b)\n",
-        "\n",
-        "        if len(format_checked_a) != len(format_checked_b):\n",
-        "            raise ValueError(\"x and y must have the same length.\")\n",
-        "        self.A = format_checked_a\n",
-        "        self.B = format_checked_b\n",
-        "\n",
-        "    def summary_check(self):\n",
-        "        return {\n",
-        "            \"x_shape\": self.A.shape,\n",
-        "            \"y_shape\": self.B.shape,\n",
-        "            \"x_dtype\": self.A.dtype,\n",
-        "            \"y_dtype\": self.B.dtype\n",
-        "        }\n",
-        "\n",
         "\n",
         "    def format_prepare(self, data, column=None):\n",
         "        \"\"\"\n",
@@ -88,7 +67,29 @@
         "        else:\n",
         "            raise TypeError(\"Unsupported data type. Use list, numpy array, pandas Series, or DataFrame.\")\n",
         "\n",
-        "    def analyze(self):\n",
+        "\n",
+        "    def fit(self, a, b, column_a=None, column_b=None, paired=False):\n",
+        "        \"\"\"\n",
+        "            This method assigns the data after fixing the format and check for their lengths.\n",
+        "        \"\"\"\n",
+        "        format_checked_a = self.format_prepare(a, column_a)\n",
+        "        format_checked_b = self.format_prepare(b, column_b)\n",
+        "\n",
+        "        if len(format_checked_a) != len(format_checked_b):\n",
+        "            raise ValueError(\"x and y must have the same length.\")\n",
+        "        self.A = format_checked_a\n",
+        "        self.B = format_checked_b\n",
+        "        self.paired = paired\n",
+        "\n",
+        "    def summary_check(self):\n",
+        "        return {\n",
+        "            \"x_shape\": self.A.shape,\n",
+        "            \"y_shape\": self.B.shape,\n",
+        "            \"x_dtype\": self.A.dtype,\n",
+        "            \"y_dtype\": self.B.dtype\n",
+        "        }\n",
+        "\n",
+        "    def analysis_starter(self, alpha=0.05):\n",
         "        \"\"\"\"\n",
         "            This method is the analysis starter. it has to check the data for normality and\n",
         "            also should distinguish between independent and paired data.\n",
@@ -97,15 +98,27 @@
         "        if self.A is None or self.B is None:\n",
         "            raise Exception(\"A and B are empty. You must specify data group a and b with object.fit(a, b).\")\n",
         "\n",
-        "        normal_a = stats.shapiro(self.A)\n",
-        "        normal_b = stats.shapiro(self.B)\n",
-        "        normal = normal_a & normal_b\n",
-        "        if normal:\n",
-        "            self.__initial_test('t-test')\n",
-        "        else:\n",
-        "            self.__initial_test('mann-whitney-u')\n",
-        "        #TODO: Check for independant or paired (usually user should specify that).\n",
+        "        shapiro_a = stats.shapiro(self.A)\n",
+        "        shapiro_b = stats.shapiro(self.B)\n",
         "\n",
+        "        normal_a = shapiro_a.pvalue > alpha\n",
+        "        normal_b = shapiro_b.pvalue > alpha\n",
+        "        normal = normal_a & normal_b\n",
+        "\n",
+        "        if self.paired:\n",
+        "            if normal:\n",
+        "                self.testtype = \"paired_ttest\"\n",
+        "            else:\n",
+        "                self.testtype = \"wilcoxon\"\n",
+        "        else:\n",
+        "            if normal:\n",
+        "                levene_test = stats.levene(self.A, self.B)\n",
+        "                equal_var = levene_test.pvalue > alpha\n",
+        "                self.testtype = \"independent_ttest_equalvar\" if equal_var else \"independent_ttest_welch\"\n",
+        "            else:\n",
+        "                self.testtype = \"mannwhitneyu\"\n",
+        "\n",
+        "        return self.testtype\n",
         "\n",
         "    def __initial_test(self, test):\n",
         "        if test == 't-test':\n",
@@ -182,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 9,
       "id": "67313a55",
       "metadata": {
         "id": "67313a55"
@@ -201,13 +214,13 @@
     {
       "cell_type": "code",
       "source": [
-        "stat_ob.fit(x, df[\"score\"])"
+        "stat_ob.fit(x, df[\"score\"], paired=True)"
       ],
       "metadata": {
         "id": "blNcm_VbtZV7"
       },
       "id": "blNcm_VbtZV7",
-      "execution_count": 36,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -220,10 +233,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pCgBtykmtsLu",
-        "outputId": "d74ed0b7-9814-462d-b55e-3f7b036cea58"
+        "outputId": "a2b738ba-a4a7-45ab-a585-29f7e8f6714a"
       },
       "id": "pCgBtykmtsLu",
-      "execution_count": 37,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +249,32 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chosen_test = stat_ob.analysis_starter()\n",
+        "print(\"Chosen test:\", chosen_test)"
+      ],
+      "metadata": {
+        "id": "R9dQ-XTLujSr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e2332604-4c44-4b64-8361-bde89973b740"
+      },
+      "id": "R9dQ-XTLujSr",
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Chosen test: paired_ttest\n"
+          ]
         }
       ]
     },
@@ -244,9 +282,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "R9dQ-XTLujSr"
+        "id": "X7_sRaxnEmN4"
       },
-      "id": "R9dQ-XTLujSr",
+      "id": "X7_sRaxnEmN4",
       "execution_count": null,
       "outputs": []
     }
