full player list, updated clean_extract, adding csv1, csv2 fully, query_final updated

--- a/csvier.py.ipynb
+++ b/csvier.py.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-28T16:50:28.323595Z",
-     "start_time": "2025-09-28T16:50:28.319370Z"
+     "end_time": "2025-09-29T00:42:22.211386Z",
+     "start_time": "2025-09-29T00:42:22.207125Z"
     }
    },
    "source": [
@@ -16,13 +16,32 @@
     "import json"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T16:50:29.730683Z",
-     "start_time": "2025-09-28T16:50:29.673919Z"
+     "end_time": "2025-09-29T00:52:53.521716Z",
+     "start_time": "2025-09-29T00:52:53.517482Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def query_to_pd(query, columns):\n",
+    "    cursor.execute(query)\n",
+    "    data = cursor.fetchall()\n",
+    "    df = pd.DataFrame(data, columns=columns)\n",
+    "    return df.reset_index(drop=True)"
+   ],
+   "id": "121e26abf5be61d4",
+   "outputs": [],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-29T01:03:12.341966Z",
+     "start_time": "2025-09-29T01:03:12.269352Z"
     }
    },
    "cell_type": "code",
@@ -35,24 +54,39 @@
     "    cnxn = mysql.connector.connect(**temp_config)\n",
     "    cnxn.database = db_name\n",
     "    cursor = cnxn.cursor()\n",
-    "    query = \"\"\"SELECT NAME,\n",
-    "                      HEIGHT\n",
+    "    query = \"\"\"SELECT PLAYERS_DETAIL.FULL_NAME,\n",
+    "                      PLAYERS_DETAIL.HEIGHT\n",
     "               FROM PLAYERS_DETAIL\n",
     "                        JOIN AWARDS ON AWARDS.player_id = PLAYERS_DETAIL.player_id\n",
     "               WHERE AWARDS.SEASON IN (2019, 2020, 2021, 2022, 2023, 2024);\"\"\"\n",
-    "    cursor.execute(query)\n",
-    "    data = cursor.fetchall()\n",
-    "    pd.DataFrame(data).to_csv('csv1_1.csv')\n",
+    "    query_to_pd(query, ['full_name', 'height']).to_csv('csv1_1.csv', index=False)\n",
     "    query = \"\"\"\n",
-    "            SELECT NAME,\n",
-    "                   HEIGHT\n",
+    "            SELECT FULL_NAME,\n",
+    "                   HEIGHT,\n",
+    "                   SEASON\n",
     "            FROM PLAYERS_DETAIL\n",
     "                     JOIN TOP_PLAYERS ON TOP_PLAYERS.player_id = PLAYERS_DETAIL.player_id\n",
     "            WHERE TOP_PLAYERS.season IN (2019, 2020, 2021, 2022, 2023, 2024)\n",
-    "            GROUP BY NAME, HEIGHT;\"\"\"\n",
-    "    cursor.execute(query)\n",
-    "    data = cursor.fetchall()\n",
-    "    pd.DataFrame(data).to_csv('csv1_2.csv')\n",
+    "            GROUP BY FULL_NAME, HEIGHT, SEASON;\"\"\"\n",
+    "    query_to_pd(query, ['full_name', 'height', 'season']).to_csv('csv1_2.csv', index=False)\n",
+    "    query = \"\"\"\n",
+    "            SELECT FULL_NAME, HEIGHT, YEAR_MIN, YEAR AS SEASON\n",
+    "            FROM WINNER_TEAMS\n",
+    "                JOIN PLAYERS_DETAIL\n",
+    "            ON WINNER_TEAMS.player_id = PLAYERS_DETAIL.player_id\n",
+    "            WHERE WINNER_TEAMS.YEAR IN (2023, 2024)\n",
+    "            GROUP BY FULL_NAME, HEIGHT, YEAR_MIN, SEASON; \\\n",
+    "            \"\"\"\n",
+    "    query_to_pd(query, ['full_name', 'height', 'year_min', 'season']).to_csv('csv2_1.csv', index=False)\n",
+    "    query = \"\"\"\n",
+    "            SELECT FULL_NAME, HEIGHT, YEAR_MIN, TOP_PLAYERS.SEASON\n",
+    "            FROM TOP_PLAYERS\n",
+    "                     JOIN PLAYERS_DETAIL ON TOP_PLAYERS.player_id = PLAYERS_DETAIL.player_id\n",
+    "            WHERE TOP_PLAYERS.SEASON IN (2023, 2024)\n",
+    "              AND TOP_PLAYERS.Rk <= 15\n",
+    "            GROUP BY FULL_NAME, HEIGHT, YEAR_MIN, TOP_PLAYERS.SEASON; \\\n",
+    "            \"\"\"\n",
+    "    query_to_pd(query, ['full_name', 'height', 'year_min', 'season']).to_csv('csv2_2.csv', index=False)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "finally:\n",
@@ -71,7 +105,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 25
   },
   {
    "metadata": {},
