updating queries to include experience

--- a/csvier.py.ipynb
+++ b/csvier.py.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-29T00:42:22.211386Z",
-     "start_time": "2025-09-29T00:42:22.207125Z"
+     "end_time": "2025-09-29T08:01:03.768614Z",
+     "start_time": "2025-09-29T08:01:03.728905Z"
     }
    },
    "source": [
@@ -16,13 +16,13 @@
     "import json"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T00:52:53.521716Z",
-     "start_time": "2025-09-29T00:52:53.517482Z"
+     "end_time": "2025-09-29T08:01:04.563623Z",
+     "start_time": "2025-09-29T08:01:04.559824Z"
     }
    },
    "cell_type": "code",
@@ -35,13 +35,13 @@
    ],
    "id": "121e26abf5be61d4",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T01:03:12.341966Z",
-     "start_time": "2025-09-29T01:03:12.269352Z"
+     "end_time": "2025-09-29T08:01:51.659944Z",
+     "start_time": "2025-09-29T08:01:51.595291Z"
     }
    },
    "cell_type": "code",
@@ -70,23 +70,23 @@
     "            GROUP BY FULL_NAME, HEIGHT, SEASON;\"\"\"\n",
     "    query_to_pd(query, ['full_name', 'height', 'season']).to_csv('csv1_2.csv', index=False)\n",
     "    query = \"\"\"\n",
-    "            SELECT FULL_NAME, HEIGHT, YEAR_MIN, YEAR AS SEASON\n",
-    "            FROM WINNER_TEAMS\n",
-    "                JOIN PLAYERS_DETAIL\n",
-    "            ON WINNER_TEAMS.player_id = PLAYERS_DETAIL.player_id\n",
-    "            WHERE WINNER_TEAMS.YEAR IN (2023, 2024)\n",
-    "            GROUP BY FULL_NAME, HEIGHT, YEAR_MIN, SEASON; \\\n",
+    "            select FULL_NAME, HEIGHT, (YEAR - YEAR_MIN) AS EXPERIENCE, YEAR AS SEASON\n",
+    "            from WINNER_TEAMS\n",
+    "                join PLAYERS_DETAIL\n",
+    "            on WINNER_TEAMS.player_id = PLAYERS_DETAIL.player_id\n",
+    "            where WINNER_TEAMS.YEAR in (2023, 2024)\n",
+    "            group by FULL_NAME, HEIGHT, (YEAR - YEAR_MIN), YEAR; \\\n",
     "            \"\"\"\n",
-    "    query_to_pd(query, ['full_name', 'height', 'year_min', 'season']).to_csv('csv2_1.csv', index=False)\n",
+    "    query_to_pd(query, ['full_name', 'height', 'experience', 'season']).to_csv('csv2_1.csv', index=False)\n",
     "    query = \"\"\"\n",
-    "            SELECT FULL_NAME, HEIGHT, YEAR_MIN, TOP_PLAYERS.SEASON\n",
+    "            SELECT FULL_NAME, HEIGHT, (SEASON - YEAR_MIN) AS EXPERIENCE, SEASON\n",
     "            FROM TOP_PLAYERS\n",
     "                     JOIN PLAYERS_DETAIL ON TOP_PLAYERS.player_id = PLAYERS_DETAIL.player_id\n",
     "            WHERE TOP_PLAYERS.SEASON IN (2023, 2024)\n",
     "              AND TOP_PLAYERS.Rk <= 15\n",
-    "            GROUP BY FULL_NAME, HEIGHT, YEAR_MIN, TOP_PLAYERS.SEASON; \\\n",
+    "            GROUP BY FULL_NAME, HEIGHT, (SEASON - YEAR_MIN), SEASON; \\\n",
     "            \"\"\"\n",
-    "    query_to_pd(query, ['full_name', 'height', 'year_min', 'season']).to_csv('csv2_2.csv', index=False)\n",
+    "    query_to_pd(query, ['full_name', 'height', 'experience', 'season']).to_csv('csv2_2.csv', index=False)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "finally:\n",
@@ -105,7 +105,7 @@
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 5
   },
   {
    "metadata": {},
