final query file

--- a/cleaner.ipynb
+++ b/cleaner.ipynb
@@ -5,8 +5,8 @@
    "id": "c661f35a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T23:35:52.119970Z",
-     "start_time": "2025-09-28T23:35:51.725944Z"
+     "end_time": "2025-09-29T08:06:59.588035Z",
+     "start_time": "2025-09-29T08:06:59.563233Z"
     }
    },
    "source": [
@@ -17,13 +17,13 @@
     "import os"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T23:35:52.639077Z",
-     "start_time": "2025-09-28T23:35:52.565246Z"
+     "end_time": "2025-09-29T08:07:00.372134Z",
+     "start_time": "2025-09-29T08:07:00.309843Z"
     }
    },
    "cell_type": "code",
@@ -62,13 +62,13 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T22:07:13.304217Z",
-     "start_time": "2025-09-28T22:07:13.262313Z"
+     "end_time": "2025-09-29T08:07:02.174861Z",
+     "start_time": "2025-09-29T08:07:02.126824Z"
     }
    },
    "cell_type": "code",
@@ -437,18 +437,18 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T22:07:26.952193Z",
-     "start_time": "2025-09-28T22:07:26.884585Z"
+     "end_time": "2025-09-29T08:07:06.261504Z",
+     "start_time": "2025-09-29T08:07:06.141168Z"
     }
    },
    "cell_type": "code",
@@ -486,23 +486,20 @@
      "output_type": "stream",
      "text": [
       "Table 'AWARDS' created or already exists.\n",
-      "Error!!: 1364 (HY000): Field 'POS' doesn't have a default value\n",
       "Connection Closed.\n"
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-26T15:04:11.293128Z",
-     "start_time": "2025-09-26T15:04:11.231487Z"
+     "end_time": "2025-09-29T08:07:08.154463Z",
+     "start_time": "2025-09-29T08:07:08.108291Z"
     }
    },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": 90,
    "source": [
     "players = pd.DataFrame()\n",
     "#adding season year to columns and extracting player_id\n",
@@ -516,13 +513,15 @@
     "players['player_id'] = players['Player_Link'].str.extract(r'/./(.*)\\.html')\n",
     "players.drop(columns='Player_Link', inplace=True)"
    ],
-   "id": "dedca43fdc441d5a"
+   "id": "dedca43fdc441d5a",
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-26T15:59:11.751954Z",
-     "start_time": "2025-09-26T15:59:11.737649Z"
+     "end_time": "2025-09-29T08:07:10.237357Z",
+     "start_time": "2025-09-29T08:07:10.223865Z"
     }
    },
    "cell_type": "code",
@@ -695,18 +694,18 @@
        "</div>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 120
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-26T16:05:43.172472Z",
-     "start_time": "2025-09-26T16:05:42.985316Z"
+     "end_time": "2025-09-29T08:07:16.536136Z",
+     "start_time": "2025-09-29T08:07:16.328198Z"
     }
    },
    "cell_type": "code",
@@ -758,15 +757,15 @@
      ]
     }
    ],
-   "execution_count": 123
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "42521d6a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T23:58:21.360066Z",
-     "start_time": "2025-09-28T23:58:21.285556Z"
+     "end_time": "2025-09-29T08:09:33.609484Z",
+     "start_time": "2025-09-29T08:09:33.540355Z"
     }
    },
    "source": [
@@ -780,9 +779,10 @@
     "players_list = pd.read_csv(os.path.join('data', 'all_players.csv'))\n",
     "players_list['player'] = players_list['player'].str.replace('*', '')\n",
     "players_list['id'] = players_list['id'].str.extract(player_id_regex)\n",
-    "players_list['height'] = players_list['height'].map(feet_inch_to_cm)\n",
+    "players_list['height'] = players_list['height'].map(feet_inch_to_cm) # from feet-inch to cm\n",
     "players_list['birth_date'] = pd.to_datetime(players_list['birth_date'])\n",
     "players_list['birth_date'] = players_list['birth_date'].dt.year.astype('Int64')\n",
+    "players_list['weight'] = np.floor(players_list['weight'] * 0.45359237 ).astype('Int64')# from lbs to kg\n",
     "players_list"
    ],
    "outputs": [
@@ -803,17 +803,17 @@
        "5312        5312           Matt Zunic      1949      1949  G-F     190   \n",
        "\n",
        "      weight  birth_date                 colleges         id  is_active  \n",
-       "0      240.0        1968                     Duke  abdelal01      False  \n",
-       "1      235.0        1946               Iowa State  abdulza01      False  \n",
-       "2      225.0        1947                     UCLA  abdulka01      False  \n",
-       "3      162.0        1969                      LSU  abdulma02      False  \n",
-       "4      223.0        1974  Michigan,San Jose State  abdulta01      False  \n",
+       "0        108        1968                     Duke  abdelal01      False  \n",
+       "1        106        1946               Iowa State  abdulza01      False  \n",
+       "2        102        1947                     UCLA  abdulka01      False  \n",
+       "3         73        1969                      LSU  abdulma02      False  \n",
+       "4        101        1974  Michigan,San Jose State  abdulta01      False  \n",
        "...      ...         ...                      ...        ...        ...  \n",
-       "5308   266.0        1997                      NaN  zizican01      False  \n",
-       "5309   240.0        1953    Kent State University   zoetji01      False  \n",
-       "5310   170.0        1948                 Duquesne   zopfbi01      False  \n",
-       "5311   240.0        1997                      NaN  zubaciv01       True  \n",
-       "5312   195.0        1919        George Washington  zunicma01      False  \n",
+       "5308     120        1997                      NaN  zizican01      False  \n",
+       "5309     108        1953    Kent State University   zoetji01      False  \n",
+       "5310      77        1948                 Duquesne   zopfbi01      False  \n",
+       "5311     108        1997                      NaN  zubaciv01       True  \n",
+       "5312      88        1919        George Washington  zunicma01      False  \n",
        "\n",
        "[5313 rows x 11 columns]"
       ],
@@ -858,7 +858,7 @@
        "      <td>1995</td>\n",
        "      <td>F-C</td>\n",
        "      <td>208</td>\n",
-       "      <td>240.0</td>\n",
+       "      <td>108</td>\n",
        "      <td>1968</td>\n",
        "      <td>Duke</td>\n",
        "      <td>abdelal01</td>\n",
@@ -872,7 +872,7 @@
        "      <td>1978</td>\n",
        "      <td>C-F</td>\n",
        "      <td>206</td>\n",
-       "      <td>235.0</td>\n",
+       "      <td>106</td>\n",
        "      <td>1946</td>\n",
        "      <td>Iowa State</td>\n",
        "      <td>abdulza01</td>\n",
@@ -886,7 +886,7 @@
        "      <td>1989</td>\n",
        "      <td>C</td>\n",
        "      <td>218</td>\n",
-       "      <td>225.0</td>\n",
+       "      <td>102</td>\n",
        "      <td>1947</td>\n",
        "      <td>UCLA</td>\n",
        "      <td>abdulka01</td>\n",
@@ -900,7 +900,7 @@
        "      <td>2001</td>\n",
        "      <td>G</td>\n",
        "      <td>185</td>\n",
-       "      <td>162.0</td>\n",
+       "      <td>73</td>\n",
        "      <td>1969</td>\n",
        "      <td>LSU</td>\n",
        "      <td>abdulma02</td>\n",
@@ -914,7 +914,7 @@
        "      <td>2003</td>\n",
        "      <td>F</td>\n",
        "      <td>198</td>\n",
-       "      <td>223.0</td>\n",
+       "      <td>101</td>\n",
        "      <td>1974</td>\n",
        "      <td>Michigan,San Jose State</td>\n",
        "      <td>abdulta01</td>\n",
@@ -942,7 +942,7 @@
        "      <td>2020</td>\n",
        "      <td>F-C</td>\n",
        "      <td>208</td>\n",
-       "      <td>266.0</td>\n",
+       "      <td>120</td>\n",
        "      <td>1997</td>\n",
        "      <td>NaN</td>\n",
        "      <td>zizican01</td>\n",
@@ -956,7 +956,7 @@
        "      <td>1983</td>\n",
        "      <td>C</td>\n",
        "      <td>216</td>\n",
-       "      <td>240.0</td>\n",
+       "      <td>108</td>\n",
        "      <td>1953</td>\n",
        "      <td>Kent State University</td>\n",
        "      <td>zoetji01</td>\n",
@@ -970,7 +970,7 @@
        "      <td>1971</td>\n",
        "      <td>G</td>\n",
        "      <td>185</td>\n",
-       "      <td>170.0</td>\n",
+       "      <td>77</td>\n",
        "      <td>1948</td>\n",
        "      <td>Duquesne</td>\n",
        "      <td>zopfbi01</td>\n",
@@ -984,7 +984,7 @@
        "      <td>2025</td>\n",
        "      <td>C</td>\n",
        "      <td>213</td>\n",
-       "      <td>240.0</td>\n",
+       "      <td>108</td>\n",
        "      <td>1997</td>\n",
        "      <td>NaN</td>\n",
        "      <td>zubaciv01</td>\n",
@@ -998,7 +998,7 @@
        "      <td>1949</td>\n",
        "      <td>G-F</td>\n",
        "      <td>190</td>\n",
-       "      <td>195.0</td>\n",
+       "      <td>88</td>\n",
        "      <td>1919</td>\n",
        "      <td>George Washington</td>\n",
        "      <td>zunicma01</td>\n",
@@ -1010,12 +1010,12 @@
        "</div>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 33
+   "execution_count": 12
   },
   {
    "metadata": {
