all csv files needed are updated

--- a/csvier.py.ipynb
+++ b/csvier.py.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-29T08:01:03.768614Z",
-     "start_time": "2025-09-29T08:01:03.728905Z"
+     "end_time": "2025-09-29T16:32:17.719341Z",
+     "start_time": "2025-09-29T16:32:17.206341Z"
     }
    },
    "source": [
@@ -21,8 +21,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T08:11:32.703390Z",
-     "start_time": "2025-09-29T08:11:32.699810Z"
+     "end_time": "2025-09-29T16:32:22.391606Z",
+     "start_time": "2025-09-29T16:32:22.387483Z"
     }
    },
    "cell_type": "code",
@@ -35,13 +35,13 @@
    ],
    "id": "121e26abf5be61d4",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T08:11:35.505650Z",
-     "start_time": "2025-09-29T08:11:35.444229Z"
+     "end_time": "2025-09-29T16:32:39.798399Z",
+     "start_time": "2025-09-29T16:32:39.723443Z"
     }
    },
    "cell_type": "code",
@@ -54,39 +54,128 @@
     "    cnxn = mysql.connector.connect(**temp_config)\n",
     "    cnxn.database = db_name\n",
     "    cursor = cnxn.cursor()\n",
-    "    query = \"\"\"SELECT PLAYERS_DETAIL.FULL_NAME,\n",
-    "                      PLAYERS_DETAIL.HEIGHT\n",
-    "               FROM PLAYERS_DETAIL\n",
-    "                        JOIN AWARDS ON AWARDS.player_id = PLAYERS_DETAIL.player_id\n",
-    "               WHERE AWARDS.SEASON IN (2019, 2020, 2021, 2022, 2023, 2024);\"\"\"\n",
+    "    query = \"\"\"\n",
+    "            SELECT PLAYERS_DETAIL.FULL_NAME,\n",
+    "                   PLAYERS_DETAIL.HEIGHT\n",
+    "            FROM AWARDS\n",
+    "                     JOIN PLAYERS_DETAIL ON AWARDS.player_id = PLAYERS_DETAIL.player_id\n",
+    "            WHERE AWARDS.SEASON IN (2019, 2020, 2021, 2022, 2023, 2024);\n",
+    "            \"\"\"\n",
     "    query_to_pd(query, ['full_name', 'height']).to_csv('csv1_1.csv', index=False)\n",
     "    query = \"\"\"\n",
     "            SELECT FULL_NAME,\n",
     "                   HEIGHT,\n",
     "                   SEASON\n",
-    "            FROM PLAYERS_DETAIL\n",
-    "                     JOIN TOP_PLAYERS ON TOP_PLAYERS.player_id = PLAYERS_DETAIL.player_id\n",
+    "            FROM TOP_PLAYERS\n",
+    "                     JOIN PLAYERS_DETAIL ON TOP_PLAYERS.player_id = PLAYERS_DETAIL.player_id\n",
     "            WHERE TOP_PLAYERS.season IN (2019, 2020, 2021, 2022, 2023, 2024)\n",
-    "            GROUP BY FULL_NAME, HEIGHT, SEASON;\"\"\"\n",
+    "            GROUP BY FULL_NAME, HEIGHT, SEASON;\n",
+    "            \"\"\"\n",
     "    query_to_pd(query, ['full_name', 'height', 'season']).to_csv('csv1_2.csv', index=False)\n",
     "    query = \"\"\"\n",
-    "            select FULL_NAME, HEIGHT, (YEAR - YEAR_MIN) AS EXPERIENCE, YEAR AS SEASON\n",
-    "            from WINNER_TEAMS\n",
-    "                join PLAYERS_DETAIL\n",
-    "            on WINNER_TEAMS.player_id = PLAYERS_DETAIL.player_id\n",
-    "            where WINNER_TEAMS.YEAR in (2023, 2024)\n",
-    "            group by FULL_NAME, HEIGHT, (YEAR - YEAR_MIN), YEAR; \\\n",
+    "            SELECT FULL_NAME,\n",
+    "                   HEIGHT,\n",
+    "                   EXPERIENCE, YEAR AS SEASON\n",
+    "            FROM WINNER_TEAMS\n",
+    "                JOIN PLAYERS_DETAIL\n",
+    "            ON WINNER_TEAMS.player_id = PLAYERS_DETAIL.player_id\n",
+    "            WHERE WINNER_TEAMS.YEAR IN (2023, 2024)\n",
+    "            GROUP BY FULL_NAME, HEIGHT, EXPERIENCE, YEAR;\n",
     "            \"\"\"\n",
     "    query_to_pd(query, ['full_name', 'height', 'experience', 'season']).to_csv('csv2_1.csv', index=False)\n",
     "    query = \"\"\"\n",
-    "            SELECT FULL_NAME, HEIGHT, (SEASON - YEAR_MIN) AS EXPERIENCE, SEASON\n",
+    "            SELECT FULL_NAME,\n",
+    "                   HEIGHT,\n",
+    "                   (SEASON - YEAR_MIN) AS EXPERIENCE,\n",
+    "                   SEASON\n",
     "            FROM TOP_PLAYERS\n",
     "                     JOIN PLAYERS_DETAIL ON TOP_PLAYERS.player_id = PLAYERS_DETAIL.player_id\n",
     "            WHERE TOP_PLAYERS.SEASON IN (2023, 2024)\n",
     "              AND TOP_PLAYERS.Rk <= 15\n",
-    "            GROUP BY FULL_NAME, HEIGHT, (SEASON - YEAR_MIN), SEASON; \\\n",
+    "            GROUP BY FULL_NAME, HEIGHT, (SEASON - YEAR_MIN), SEASON;\n",
     "            \"\"\"\n",
     "    query_to_pd(query, ['full_name', 'height', 'experience', 'season']).to_csv('csv2_2.csv', index=False)\n",
+    "    query = \"\"\"\n",
+    "            WITH MVP_PG AS (SELECT DISTINCTROW PLAYERS_DETAIL.FULL_NAME, TOP_PLAYERS.POS,\n",
+    "                                   AWARDS.SEASON\n",
+    "                            FROM AWARDS\n",
+    "                                     JOIN PLAYERS_DETAIL\n",
+    "                                          ON AWARDS.player_id = PLAYERS_DETAIL.player_id\n",
+    "                                     JOIN TOP_PLAYERS\n",
+    "                                          ON TOP_PLAYERS.player_id = AWARDS.player_id\n",
+    "                            WHERE AWARDS.SEASON IN (2019, 2020, 2021, 2022, 2023, 2024)\n",
+    "                              AND TOP_PLAYERS.POS = 'PG'\n",
+    "                            ORDER BY AWARDS.SEASON)\n",
+    "            SELECT FULL_NAME,\n",
+    "                   POS,\n",
+    "                   count(*) AS NOMINATED\n",
+    "            FROM MVP_PG\n",
+    "            GROUP BY FULL_NAME, POS\n",
+    "            ORDER BY NOMINATED DESC, FULL_NAME LIMIT 3;\n",
+    "            \"\"\"\n",
+    "    query_to_pd(query, ['full_name', 'position', 'number_of_nomination']).to_csv('csv3.csv', index=False)\n",
+    "    query = \"\"\"\n",
+    "            WITH TOP_AGILITY\n",
+    "                     AS (SELECT DISTINCTROW PLAYERS_DETAIL.FULL_NAME, (PLAYERS_DETAIL.HEIGHT / PLAYERS_DETAIL.WEIGHT) AS AGILITY,\n",
+    "                                TOP_PLAYERS.SEASON\n",
+    "                         FROM TOP_PLAYERS\n",
+    "                                  JOIN PLAYERS_DETAIL\n",
+    "                                       ON TOP_PLAYERS.player_id = PLAYERS_DETAIL.player_id\n",
+    "                         WHERE TOP_PLAYERS.Rk <= 20\n",
+    "                           AND SEASON IN (2023, 2024))\n",
+    "            SELECT FULL_NAME,\n",
+    "                   AGILITY\n",
+    "            FROM TOP_AGILITY;\n",
+    "            \"\"\"\n",
+    "    query_to_pd(query, ['full_name', 'agility']).to_csv('csv_h1_1.csv', index=False)\n",
+    "    query = \"\"\"\n",
+    "            WITH TOP_AGILITY\n",
+    "                     AS (SELECT DISTINCTROW PLAYERS_DETAIL.FULL_NAME, (PLAYERS_DETAIL.HEIGHT / PLAYERS_DETAIL.WEIGHT) AS AGILITY,\n",
+    "                                TOP_PLAYERS.SEASON\n",
+    "                         FROM TOP_PLAYERS\n",
+    "                                  JOIN PLAYERS_DETAIL\n",
+    "                                       ON TOP_PLAYERS.player_id = PLAYERS_DETAIL.player_id\n",
+    "                         WHERE TOP_PLAYERS.Rk <= 20\n",
+    "                           AND SEASON IN (2021, 2022))\n",
+    "            SELECT FULL_NAME,\n",
+    "                   AGILITY\n",
+    "            FROM TOP_AGILITY; \\\n",
+    "            \"\"\"\n",
+    "    query_to_pd(query, ['full_name', 'agility']).to_csv('csv_h1_2.csv', index=False)\n",
+    "    query = \"\"\"\n",
+    "            WITH WINNERS AS (SELECT DISTINCTROW PLAYERS_DETAIL.FULL_NAME, WINNER_TEAMS.EXPERIENCE,\n",
+    "                                    (YEAR - BIRTH_YEAR) AS AGE,\n",
+    "                                    WINNER_TEAMS.YEAR\n",
+    "                             FROM WINNER_TEAMS\n",
+    "                                      JOIN PLAYERS_DETAIL\n",
+    "                                           ON WINNER_TEAMS.player_id = PLAYERS_DETAIL.player_id\n",
+    "                             WHERE YEAR IN (2023, 2024)), WINNERS_POTENTIAL AS (\n",
+    "            SELECT FULL_NAME, (EXPERIENCE / AGE) AS POTENTIAL, YEAR\n",
+    "            FROM WINNERS)\n",
+    "\n",
+    "            SELECT FULL_NAME,\n",
+    "                   POTENTIAL, YEAR\n",
+    "            FROM WINNERS_POTENTIAL; \\\n",
+    "\n",
+    "            \"\"\"\n",
+    "    query_to_pd(query, ['full_name', 'potential', 'season']).to_csv('csv_h2_1.csv', index=False)\n",
+    "    query = \"\"\"\n",
+    "            WITH WINNERS AS (SELECT DISTINCTROW PLAYERS_DETAIL.FULL_NAME, WINNER_TEAMS.EXPERIENCE,\n",
+    "                                    (YEAR - BIRTH_YEAR) AS AGE,\n",
+    "                                    WINNER_TEAMS.YEAR\n",
+    "                             FROM WINNER_TEAMS\n",
+    "                                      JOIN PLAYERS_DETAIL\n",
+    "                                           ON WINNER_TEAMS.player_id = PLAYERS_DETAIL.player_id\n",
+    "                             WHERE YEAR IN (2021, 2022)), WINNERS_POTENTIAL AS (\n",
+    "            SELECT FULL_NAME, (EXPERIENCE / AGE) AS POTENTIAL, YEAR\n",
+    "            FROM WINNERS)\n",
+    "\n",
+    "            SELECT FULL_NAME,\n",
+    "                   POTENTIAL, YEAR\n",
+    "            FROM WINNERS_POTENTIAL; \\\n",
+    "            \"\"\"\n",
+    "    query_to_pd(query, ['full_name', 'potential', 'season']).to_csv('csv_h2_2.csv', index=False)\n",
+    "    print('All is good!!')\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "finally:\n",
@@ -101,11 +190,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "All is good!!\n",
       "Connection Closed.\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 5
   },
   {
    "metadata": {},
